alter scss avoid_header and text-align center

--- a/app/assets/stylesheets/modal-register.scss
+++ b/app/assets/stylesheets/modal-register.scss
@@ -25,6 +25,7 @@
     margin:auto;
     margin-top: 100px; //ヘッダーを基準
     background-color: #374654;
+    text-align: center;
   }
 
   &__close {
