--- a/app/assets/stylesheets/movie.scss
+++ b/app/assets/stylesheets/movie.scss
@@ -7,7 +7,7 @@
     width: 90%;
     margin: 0 auto;
     margin-top: 100px;
-    //text-align: center;
+    text-align: center;
     padding:50px, 0, 50px, 0;
     //position: relative;
   }
