--- a/app/assets/stylesheets/top-wrapper.scss
+++ b/app/assets/stylesheets/top-wrapper.scss
@@ -2,7 +2,7 @@
   width:100%;
   height:100%;
   @media (max-width: 1980px){
-    padding-top: 90px;
+    //padding-top: 90px;
   }
   @media (max-width: 414px){
     padding-top: initial;
